modified:   config/error_reporting.json 	modified:   config/game_preferences.json 	modified:   config/interaction_settings.json 	modified:   config/plex_config.json 	modified:   config/security_privacy.json 	modified:   config/settings.json 	modified:   config/sync_and_backup.json 	modified:   config/user_customizations.json 	modified:   config/voice_settings.json 	modified:   core/ai_agent.py 	modified:   core/config_loader.py 	modified:   core/decision_maker.py 	modified:   core/file_monitor.py 	modified:   core/memory.py 	modified:   core/system_monitor.py

--- a/config/plex_config.json
+++ b/config/plex_config.json
@@ -1,4 +1,5 @@
 {
+    "plex_server_address": "http://192.168.40.108:32400",  
     "download_dir": "E:/Downloads",
     "plex_dir_movies": "X:/Movies/",
     "plex_dir_tv_shows": "X:/TV_Shows/"
