--- a/config/interaction_settings.json
+++ b/config/interaction_settings.json
@@ -2,5 +2,11 @@
     "auto_reminder": true,
     "reminder_interval": 60,
     "notification_level": "normal",
-    "allow_casual_conversation": true
+    "allow_casual_conversation": true,
+    "notification_methods": {
+        "app_notifications": true,
+        "email": false,
+        "sms": false,
+        "push_notifications": true
+    }
 }
