new file:   audio/footsteps.mp3

--- a/config/plex_config.json
+++ b/config/plex_config.json
@@ -1,6 +1,85 @@
 {
-    "plex_server_address": "http://192.168.40.108:32400",  
-    "download_dir": "E:/Downloads",
-    "plex_dir_movies": "X:/Movies/",
-    "plex_dir_tv_shows": "X:/TV_Shows/"
+    "plex_server": {
+        "plex_server_address": "http://192.168.40.108:32400",
+        "server_token": "YOUR_PLEX_SERVER_TOKEN", 
+        "user": {
+            "username": "YOUR_PLEX_USERNAME",
+            "password": "YOUR_PLEX_PASSWORD"
+        },
+        "connection_retries": 3,
+        "retry_interval": 5  
+    },
+    "download_preferences": {
+        "download_dir": "E:/Downloads",
+        "download_monitor_interval": 10, 
+        "auto_move_downloads": true,
+        "auto_delete_downloads": true, 
+        "supported_file_types": [".mp4", ".mkv", ".avi", ".mov", ".srt"] 
+    },
+    "plex_media_directories": {
+        "plex_dir_movies": "X:/Movies/",
+        "plex_dir_tv_shows": "X:/TV_Shows/",
+        "plex_music_dir": "X:/Music/",
+        "plex_pictures_dir": "X:/Pictures/"
+    },
+    "media_organization": {
+        "auto_rename": true,
+        "naming_convention": {
+            "movies": "{title} ({year})",
+            "tv_shows": "{show_name} - S{season:02}E{episode:02} - {episode_name}",
+            "music": "{artist}/{album}/{track_number} - {track_name}"
+        },
+        "metadata_fetch": true,
+        "metadata_sources": ["TMDb", "TheTVDB", "MusicBrainz"]
+    },
+    "scan_plex_library": {
+        "scan_interval": 60,  
+        "auto_scan_on_new_media": true,
+        "scan_movies": true,
+        "scan_tv_shows": true,
+        "scan_music": false,
+        "scan_photos": false
+    },
+    "download_handling": {
+        "move_incomplete_downloads": false,
+        "incomplete_directory": "E:/Incomplete_Downloads",
+        "check_file_size_before_move": true,
+        "min_file_size_mb": 100  
+    },
+    "file_cleanup": {
+        "delete_original_after_move": true,
+        "delete_partial_files": true,
+        "partial_file_extensions": [".part", ".temp", ".crdownload"]
+    },
+    "plex_sync_settings": {
+        "sync_enabled": true,
+        "sync_frequency": "daily",
+        "auto_sync_on_network": ["Home_WiFi"],
+        "sync_notification": true
+    },
+    "user_notifications": {
+        "send_notifications": true,
+        "notification_methods": {
+            "push": true,
+            "email": true,
+            "sms": false
+        },
+        "new_media_available_message": "New media added to Plex: {media_title}"
+    },
+    "error_handling": {
+        "failed_move_retry_limit": 3,
+        "retry_backoff_factor": 2,
+        "on_failure": {
+            "notify_user": true,
+            "log_to_file": true,
+            "move_to_manual_review": "E:/Downloads/Manual_Review"
+        }
+    },
+    "logging_preferences": {
+        "log_file": "S:/Snowball/logs/plex_operations.log",
+        "log_level": "INFO",
+        "rotate_logs": true,
+        "max_log_file_size_mb": 10,
+        "backup_count": 5
+    }
 }
