new file:   core/ai/agent.py 	new file:   core/ai/conversation.py 	new file:   core/ai/sentiment_analysis.py 	new file:   core/ai/speech.py 	new file:   core/ai/training.py 	new file:   core/ai/vision.py 	new file:   core/initializer.py 	new file:   interface/game_interface.py

--- a/config/ai_settings.json
+++ b/config/ai_settings.json
@@ -3,27 +3,23 @@
     "learning_rate": 0.01,
     "dynamic_learning_rate": true,
     "learning_rate_decay": 0.001,
-    "daily_training_sessions": 2,
-    "training_mode": "supervised",
+    "daily_training_sessions": 5,
+    "training_mode": "Supervised",
     "epoch_count": 50,
     "batch_size": 32,
     "training_data_path": "S:/Snowball/data/training_dataset",
-    "optimizer": "adam",
-    "model_type": "neural_network",
-    
+    "optimizer": "Adam",
+    "model_type": "Neural Network",
     "performance_tracking": true,
     "save_training_logs": true,
-    "evaluation_frequency": "daily",
-    
-    "personality_mode": "friendly",
+    "evaluation_frequency": "Daily",
+    "personality_mode": "Friendly",
     "allow_casual_conversation": true,
-    "response_speed": "instant",
-
+    "response_speed": "Instant",
     "knowledge_expansion": true,
     "memory_retention_limit": 1000,
-    "auto_learning_mode": false,
-
+    "auto_learning": true,
     "safe_mode": true,
     "max_consecutive_failures": 3,
-    "privacy_protection_enabled": true
+    "privacy_protection": true
 }
